fixed spacing bugs and adjusted grid

--- a/biotope-boilerplate/src/components/AddressLabel/styles.scss
+++ b/biotope-boilerplate/src/components/AddressLabel/styles.scss
@@ -6,7 +6,7 @@
         color: #fff;
 
         &__address {
-            font-size: 18px;
+            font-size: 22px;
         }
 
         &__route {
