--- a/biotope-boilerplate/src/components/PageLayout/styles.scss
+++ b/biotope-boilerplate/src/components/PageLayout/styles.scss
@@ -7,6 +7,7 @@
     .page-layout {
         background-color: $primary;
         color: white;
+        min-height: 100vh;
 
         &__container {
             padding: 140px 30px;
