--- a/biotope-boilerplate/src/components/RootEvents/styles.scss
+++ b/biotope-boilerplate/src/components/RootEvents/styles.scss
@@ -64,7 +64,7 @@
             margin: 0 60px;
 
             &.twelve-column-grid {
-                @include grid(12, 64);
+                @include grid(12, 44);
             }
 
             former-talk {
