--- a/biotope-boilerplate/src/components/RootSchedule/styles.scss
+++ b/biotope-boilerplate/src/components/RootSchedule/styles.scss
@@ -17,8 +17,12 @@
     }
 
     @media screen and (min-width: 768px) {
-        .chedule {
+        .schedule {
             margin: 0 60px;
+        }
+
+        &.twelve-column-grid {
+            @include grid(12, 44);
         }
     }
 
