--- a/biotope-boilerplate/src/components/RootSpeakers/styles.scss
+++ b/biotope-boilerplate/src/components/RootSpeakers/styles.scss
@@ -25,7 +25,7 @@
             margin: 0 60px;
 
             &.twelve-column-grid {
-                @include grid(12, 64);
+                @include grid(12, 44);
             }
 
             speaker-box {
