--- a/biotope-boilerplate/src/components/SchedulePlaceholder/styles.scss
+++ b/biotope-boilerplate/src/components/SchedulePlaceholder/styles.scss
@@ -5,11 +5,11 @@
     .sp {
         position: relative;
         height: 500px;
-        margin-top: 85px;
+        margin: 85px 0;
         word-break: normal;
 
         &__box-one {
-            width: 240px;
+            width: 220px;
             height: 400px;
             left: 50px;
             background-color: $highlight;
@@ -20,7 +20,7 @@
             position: absolute;
             font-size: 2em;
             max-width: 400px;
-            left: 50px;
+            left: 65px;
             top: 300px;
             line-height: 1.2em;
             display: inline-block;
@@ -31,7 +31,7 @@
         &__title::after {
             width: 60px;
             margin-top: 30px;
-            margin-left: 50px;
+            margin-left: 0px;
             content: '';
             display: block;
             height: 5px;
@@ -43,7 +43,7 @@
             position: absolute;
             margin-top: 10px;
             width: 212px;
-            left: 100px;
+            left: 65px;
             top: 540px;
         }
 
@@ -63,18 +63,18 @@
 
     @media screen and (min-width: 820px) {
         .sp {
-            margin-bottom: 100px;
+            margin-bottom: 180px;
 
          &__box-one {
-            width: 350px;
+            width: 300px;
             height: 600px;
-            left: 190px;
+            left: 150px;
          }
 
         &__title {
-            left: 390px;
-            top: 100px;
-            width: 450px;
+            left: 300px;
+            top: 60px;
+            width: 350px;
             font-size: 3em;
         }
 
@@ -84,14 +84,14 @@
         }
 
         &__date {
-            left: 570px;
-            top: 370px;
+            left: 480px;
+            top: 400px;
         }
 
         svg {
-            width: 450px;
-            height: 450px;
-            top: 240px;
+            width: 350px;
+            height: 350px;
+            top: 350px;
             left: 0;
         }
         }
